# mini-fileserver

./: .gitignore  LICENSE  client.cpp  makefile  server.cpp  utils.cpp
CommandParser/include/parser/: parser.h
CommandParser/include/tokenizer/: tokenizer.h
CommandParser/parser/: makefile  parser_tests.cpp
CommandParser/sources/parser/: parser.cpp
CommandParser/sources/tokenizer/: tokenizer.cpp
CommandParser/tests/misc/: main.cpp
CommandParser/tests/parser/: parser_tests.cpp
CommandParser/tests/tests/: parser_tests  tokenizer_tests
CommandParser/tests/tokenizer/: tokenizer_tests.cpp
CommandParser/tokenizer/: makefile  tokenizer.cpp  tokenizer.h  tokenizerTests  tokenizer_tests.cpp
command-parser/: CMakeLists.txt
command-parser/include/command/: command.h
command-parser/include/parser/: parser.h
command-parser/include/tokenizer/: tokenizer.h
command-parser/sources/command/: command.cpp
command-parser/sources/parser/: parser.cpp
command-parser/sources/tokenizer/: tokenizer.cpp
command-parser/tests/: CMakeLists.txt
command-parser/tests/command/: command_tests.cpp
command-parser/tests/parser/: parser_tests.cpp
command-parser/tests/tokenizer/: tokenizer_tests.cpp
parser/: parser.cpp  parser.h  parser_tests.cpp
